refactor : 마감 임박 공구 목록 조회 -> 마감 시간이 같을 경우 남은 재고가 적은 순으로 구현